--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link type="image/png" sizes="16x16" rel="icon" href="./src/assets/icons8-corazón-del-pixel-48.png">
+    <link type="image/png" sizes="16x16" rel="icon" href="./src/assets/estrella.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- HTML Meta Tags -->
     <title>Debi's Portfolio 💖</title>
