--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link type="image/png" sizes="16x16" rel="icon" href="./src/assets/estrella.png">
+    <link type="image/png" sizes="16x16" rel="icon" href="./src/assets/icons8-corazón-del-pixel-48.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- HTML Meta Tags -->
-    <title>Debi's Portfolio 💖</title>
+    <title>Debi's Portfolio ✨</title>
     <meta name="description" content="Desarrolladora Fullstack Web! Me apasiona la tecnología 💻 y básicamente el hermoso mundo nerd que me rodea! 🖥️📱🕹️🎮🧪 Ah y los colores 🌈">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://www.debiabril.com.ar">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Debi's Portfolio 💖">
+    <meta property="og:title" content="Debi's Portfolio ✨">
     <meta property="og:description" content="Desarrolladora Fullstack Web! Me apasiona la tecnología 💻 y básicamente el hermoso mundo nerd que me rodea! 🖥️📱🕹️🎮🧪 Ah y los colores 🌈">
     <meta property="og:image" content="https://yourimageshare.com/ib/ALmAPdotd5.webp">
 
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="debiabril.com.ar">
     <meta property="twitter:url" content="https://www.debiabril.com.ar">
-    <meta name="twitter:title" content="Debi's Portfolio 💖">
+    <meta name="twitter:title" content="Debi's Portfolio ✨">
     <meta name="twitter:description" content="Desarrolladora Fullstack Web! Me apasiona la tecnología 💻 y básicamente el hermoso mundo nerd que me rodea! 🖥️📱🕹️🎮🧪 Ah y los colores 🌈">
     <meta name="twitter:image" content="https://yourimageshare.com/ib/ALmAPdotd5.webp">
 
